--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@zeit/react-jsx-parser": "^2.0.0",
     "github-slugger": "^1.2.1",
     "next": "^9.2.2-canary.3",
+    "next-ga": "^2.3.4",
     "prismjs": "^1.17.1",
     "react": "16.12.0",
     "react-dom": "16.12.0"
