--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "dependencies": {
     "@zeit/react-jsx-parser": "^2.0.0",
     "github-slugger": "^1.2.1",
-    "next": "^9.2.2-canary.3",
+    "next": "9.3.0",
     "next-ga": "^2.3.4",
     "prismjs": "^1.17.1",
     "react": "16.12.0",
