--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
   },
   "dependencies": {
     "@zeit/react-jsx-parser": "^2.0.0",
+    "async-sema": "^3.1.0",
     "github-slugger": "^1.2.1",
-    "next": "9.3.0",
+    "next": "^9.5.2",
     "next-ga": "^2.3.4",
     "prismjs": "^1.17.1",
-    "react": "16.12.0",
-    "react-dom": "16.12.0"
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "uuid": "^8.3.0"
   },
   "devDependencies": {
     "@types/node": "^13.1.2",
